--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suivi du Temps d'Étude</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,6 +12,7 @@
         <div class="custom-alert-content animate">
             <span class="close">&times;</span>
             <p id="alertMessage"></p>
+            <canvas id="timeChart"></canvas>
         </div>
     </div>
     <div class="container">
