update comments apparences in courses + Indication when above buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="courses-list"></div>
         <div class="total-time">
             <h2>Temps total à étudier  <span id="total-time">0:00:00</span></h2>
-            <button id="popupButton" onclick="info()"><b>%</b></button>
+            <button id="popupButton" onclick="info()" title="Affiche les statistiques du temps passé sur chaque cours"><b>%</b></button>
         </div>
     </div>
     <script src="script.js"></script>
