--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         </div>
     </div>
     <div class="container">
+        <div class="course" style="display: none;"></div>
+        <input type="checkbox" class="input" id="dark-mode">
+        <label for="dark-mode" class="label">
+            <div class="circle"></div>
+        </label>
         <h1>Suivi du Temps d'Étude</h1>
         <div class="add-course">
             <input type="text" id="course-name" placeholder="Nom du cours">
