--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="course" style="display: none;"></div>
         <input type="checkbox" class="input" id="dark-mode">
-        <label for="dark-mode" class="label">
+        <label for="dark-mode" class="label" title="Mode sombre">
             <div class="circle"></div>
         </label>
         <h1>Suivi du Temps d'Étude</h1>
