add button additionnal statistics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="customAlertBox" class="custom-alert">
         <div class="custom-alert-content animate">
             <span class="close">&times;</span>
+            <span class="statistics">+ Statistiques</span>
             <p id="alertMessage"></p>
             <canvas id="timeChart"></canvas>
         </div>
