update darkmode and statistics button correction

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="customAlertBox" class="custom-alert">
         <div class="custom-alert-content animate">
             <span class="close">&times;</span>
-            <span class="statistics">+ Statistiques</span>
+            <span class="statistics" title="Appuie pour avoir des statistiques plus détailées">+ Statistiques</span>
             <p id="alertMessage"></p>
             <canvas id="timeChart"></canvas>
         </div>
