--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>Temps total à étudier  <span id="total-time">0:00:00</span></h2>
             <button id="popupButton" onclick="info()" title="Affiche les statistiques du temps passé sur chaque cours"><b>%</b></button>
         </div>
-        <h6><a href="mailto:alois.tavier@gmail.com" id="link-mail" >Contact : Aloïs TAVIER</a></h6>
+        <h6><a href="mailto:alois.tavier@gmail.com" id="link-mail" style="text-decoration: none;">Contact : Aloïs TAVIER</a></h6>
     </div>
     <script src="script.js"></script>
 </body>
