--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suivi du Temps d'Étude</title>
-    <link rel="icon" type="image/x-icon" href="/education.ico">
+    <link rel="icon" href="education.ico?v1" type="image/x-icon" />
+    <link rel="shortcut icon" href="education.ico?v1" type="image/x-icon" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
