--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suivi du Temps d'Étude</title>
-    <link rel="icon" href="education.ico?v1" type="image/x-icon" />
-    <link rel="shortcut icon" href="education.ico?v1" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.gradescope.com/assets/logo/icons/64x64-3c29e9891a184582f67b6a2cd6c4a96bbfb20bbe7d7249d8f7feaa2ebd13832e.png">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
