--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="tools">
             <h2>Outils</h2>
-            <div class="add-course">
+            <div class="add-site">
                 <div id="div-site">
                     <input type="text" class="site-input" id="site-name" placeholder="Nom du site">
                     <input type="text" id="site-url" placeholder="URL du site">
